--- a/Exercise_2_Aduana.ipynb
+++ b/Exercise_2_Aduana.ipynb
@@ -27,12 +27,12 @@
     {
       "cell_type": "code",
       "source": [
-        "x = int(input(\"Input Grade:\"))\n",
-        "if 101 > x >= 75:\n",
+        "x = float(input(\"Input Grade:\"))\n",
+        "if x >= 75 and x <= 100:\n",
         "  print(\"Passed\")\n",
-        "elif x == 74:\n",
+        "elif x >= 74 and x <75:\n",
         "  print(\"Remedial\")\n",
-        "elif x < 74:\n",
+        "elif x < 74 and x >=0:\n",
         "  print(\"Failed\")\n",
         "else:\n",
         "  print(\"Invalid input, try again.\")\n"
@@ -42,15 +42,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AbRfpRrsP9Js",
-        "outputId": "76d59b3d-eb59-45b7-e1ec-605155aafa99"
+        "outputId": "269df75f-1027-4b01-c1fe-16639625c348"
       },
-      "execution_count": 70,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Input Grade:73\n",
+            "Input Grade:-6\n",
             "Invalid input, try again.\n"
           ]
         }
